<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut android:shortcutId="new_chat" android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_new_chat"
        android:shortcutLongLabel="@string/shortcut_new_chat_long"
        android:icon="@drawable/ic_edit">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="com.aiai.app"/>
        <categories android:name="android.shortcut.conversation"/>
    </shortcut>
    <shortcut android:shortcutId="prompt" android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_prompt"
        android:shortcutLongLabel="@string/shortcut_prompt_long"
        android:icon="@drawable/ic_template">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="com.aiai.app"/>
    </shortcut>
    <shortcut android:shortcutId="settings" android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_settings"
        android:shortcutLongLabel="@string/shortcut_settings_long"
        android:icon="@drawable/ic_settings">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="com.aiai.app"/>
    </shortcut>
</shortcuts>
