<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog" android:orientation="vertical"
    android:padding="@dimen/spacing_xl">
    <TextView android:id="@+id/tv_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/dialog_input_title"
        android:textColor="@color/text_primary" android:textSize="@dimen/text_xl"
        android:textStyle="bold"/>
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/til_input"
        style="@style/Widget.AiAi.TextInputLayout" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_base">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/et_input"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/hint_input_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_base" android:gravity="end"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton android:id="@+id/btn_cancel"
            style="@style/Widget.AiAi.Button.Text" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/cancel"/>
        <com.google.android.material.button.MaterialButton android:id="@+id/btn_ok"
            style="@style/Widget.AiAi.Button.Text" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/ok"/>
    </LinearLayout>
</LinearLayout>
