<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog" android:orientation="vertical"
    android:padding="@dimen/spacing_xl">
    <TextView android:id="@+id/tv_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/dialog_info_title"
        android:textColor="@color/text_primary" android:textSize="@dimen/text_xl"
        android:textStyle="bold"/>
    <TextView android:id="@+id/tv_message" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_base"
        android:textColor="@color/text_secondary" android:textSize="@dimen/text_md"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl" android:gravity="end"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton android:id="@+id/btn_cancel"
            style="@style/Widget.AiAi.Button.Text" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/cancel"/>
        <com.google.android.material.button.MaterialButton android:id="@+id/btn_confirm"
            style="@style/Widget.AiAi.Button.Text" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginStart="@dimen/spacing_sm"
            android:text="@string/confirm"/>
    </LinearLayout>
</LinearLayout>
